--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: mongo_database
     restart: always
     ports:
-      - 27017:27017
+      - 5000:5000
     environment:
       MONGO_INITDB_ROOT_USERNAME: lappis
       MONGO_INITDB_ROOT_PASSWORD: lappis
@@ -23,10 +23,39 @@ services:
     volumes:
       - .:/app
     ports:
-      - "3000:3000"
+      - "27017:27017"
     depends_on:
-      - mongo
+      - postgress
+
+  postgress:
+      image: postgres:latest
+      container_name: postgresql_metabase
+      restart: always
+      environment:
+          POSTGRES_DB: metabase
+          POSTGRES_USER: lappis
+          POSTGRES_PASSWORD: lappis 
+
+  meta:
+    image: metabase/metabase:latest
+    container_name: metabase
+    restart: always
+    environment:
+      MB_DB_TYPE: postgres
+      MB_DB_DBNAME: metabase
+      MB_DB_PORT: 5432
+      MB_DB_USER: lappis
+      MB_DB_PASS: lappis
+      MB_DB_HOST: postgress
+      MB_DB_FILE: /metabase-data/metabase.db
+    depends_on:
+      - postgress
+    volumes:
+      - .:/metabase
+    ports:
+      - "3000:3000"
   
 volumes :
   dataBase_mongo :
     driver : local
+
